# better-duck

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  SECURITY.md  crates.js  help.html  rustfmt.toml  search-index.js  settings.html  src-files.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish_crate.yml
better_duck_core/: all.html  index.html  macro.impl_appendable_via_to_duck_native!.html  macro.impl_appendable_via_to_duck_native.html  sidebar-items.js  struct.CachedStatement.html  struct.DuckResult.html  struct.DuckRow.html
better_duck_core/connection/: index.html  struct.Connection.html
better_duck_core/error/: enum.DuckDBConversionError.html  enum.Error.html  index.html  sidebar-items.js  type.Result.html
better_duck_core/raw/result/: struct.DuckResult.html
better_duck_core/raw/row/: struct.DuckRow.html
better_duck_core/raw/statement/: struct.CachedStatement.html
better_duck_core/types/: enum.Type.html  index.html  sidebar-items.js  trait.DuckDialect.html
better_duck_core/types/appendable/: index.html  sidebar-items.js  trait.AppendAble.html
better_duck_core/types/array/: index.html
better_duck_core/types/blob/: index.html  struct.Blob.html
better_duck_core/types/date_chrono/: index.html  sidebar-items.js  struct.TimeNs.html  struct.TimeTz.html  struct.TimestampMs.html  struct.TimestampNs.html  struct.TimestampS.html  struct.TimestampTz.html
better_duck_core/types/duck_struct/: index.html
better_duck_core/types/from_impls/: index.html
better_duck_core/types/map/: index.html
better_duck_core/types/numeric/: index.html
better_duck_core/types/union/: index.html
better_duck_core/types/value/: enum.DuckValue.html  index.html  sidebar-items.js
better_duck_core/types/value_ref/: enum.DuckValueRef.html  index.html  sidebar-items.js
better_duck_core/types/varchar/: index.html
better_duck_diesel/: all.html  index.html  sidebar-items.js
better_duck_diesel/backend/: index.html  sidebar-items.js  struct.DuckDb.html  struct.DuckDbBindCollector.html  struct.DuckDbOnConflictClause.html  struct.DuckDbTypeWrapper.html
better_duck_diesel/bind_collector/: struct.DuckDbBindCollector.html
better_duck_diesel/connection/: index.html  sidebar-items.js  struct.DuckDbConnection.html  struct.DuckDbCursor.html
better_duck_diesel/helpers/: index.html
better_duck_diesel/qb/: index.html  sidebar-items.js  struct.Comma.html  struct.DuckDbQueryBuilder.html  struct.In.html
better_duck_diesel/qb/limit_offset/: index.html
better_duck_diesel/result/: index.html  sidebar-items.js  struct.DuckDbError.html
better_duck_diesel/row/: index.html  sidebar-items.js  struct.Field.html  struct.Row.html
better_duck_diesel/sql_types/: index.html
better_duck_diesel/types/: enum.IsNull.html  index.html  sidebar-items.js  struct.Output.html  trait.ToSql.html
better_duck_diesel/types/binary/: index.html
better_duck_diesel/types/date_chrono/: index.html
better_duck_diesel/types/duckdb_types/: index.html  (+14 more)
crates/better-duck-core/: Cargo.toml  build.rs
crates/better-duck-core/benches/: comparison.rs  my_benchmark.rs
crates/better-duck-core/src/: config.rs  connection.rs  error.rs  lib.rs
crates/better-duck-core/src/helpers/: duck_result.rs  mod.rs  path.rs
crates/better-duck-core/src/raw/: appender.rs  connection.rs  data_chunk.rs  mod.rs  result.rs  row.rs  statement.rs
crates/better-duck-core/src/types/: appendable.rs  array.rs  blob.rs  cmp.rs  date_chrono.rs  date_native.rs  duck_struct.rs  from_impls.rs  map.rs  mod.rs  numeric.rs  union.rs  value.rs  value_ref.rs  varchar.rs
crates/better-duck-core/tests/: integration_test.rs  mod.rs  nested_composites.rs  test_result.rs  test_statement.rs  types_roundtrip.rs
crates/better-duck-core/tests/common/: mod.rs
crates/better-duck-diesel/: Cargo.toml
crates/better-duck-diesel/src/: backend.rs  bind_collector.rs  connection.rs  lib.rs  result.rs  row.rs
crates/better-duck-diesel/src/helpers/: mod.rs  transaction_manager.rs
crates/better-duck-diesel/src/qb/: limit_offset.rs  mod.rs
crates/better-duck-diesel/src/types/: binary.rs  date_chrono.rs  date_native.rs  duckdb_types.rs  list.rs  mod.rs  numeric.rs  varchar.rs
crates/better-duck-diesel/tests/: README.md  compile_check.rs  connection_mgmt.rs  crud_dsl.rs  error_handling.rs  integration_production.rs  query_dsl.rs  transactions.rs  types_roundtrip.rs
search.desc/better_duck_core/: better_duck_core-desc-0-.js
search.index/: 0076672723.js  012c044876.js  0138339dec.js  020525ecab.js  0227c36d2c.js  02f7767cd0.js  03557fe694.js  0379f8b000.js  0393defaf6.js  03f808391d.js  04fb388d33.js  054d9007ad.js  07085be156.js  093340e93a.js  0b0329129b.js  0cb7044cd5.js  0d69cb4fb9.js  0de0c9ce6a.js  0eaedc3ca5.js  117703c0fc.js  1215a527fb.js  130c34c95f.js  14160bdd10.js  142df37d15.js  145c115098.js  14d3e763c8.js  15f548f4f6.js  17cf5d4d25.js  19280da90d.js  1a2d994b38.js  1bda16ad18.js  1cc9aadfc4.js  1d617b3576.js  1e23987c51.js  1e8da7fb13.js  1fa0c5103a.js  200e840b2e.js  20524254fc.js  20feed254b.js  21302631b9.js  (+108 more)
search.index/crateNames/: 23e8639a6a.js
search.index/desc/: b4fa58bdf4.js  c1903d3bec.js  e5a6950a2c.js
search.index/entry/: 208b641d0e.js  21ccc3cb8c.js  4c9cf5ac8a.js  6ba4e86d7d.js
search.index/function/: 798d225b60.js  8599073c3a.js  9f29eec1c4.js  a8394d5f76.js
search.index/generic_inverted_index/: 425c6423d8.js  5cf42a1346.js  68336442b5.js
search.index/name/: 19cef20aae.js  1d61176014.js  a364ebef12.js
search.index/normalizedName/: 08bc3824d9.js  0fc4807d37.js  35814e742e.js
search.index/path/: 17147fa2ff.js  4a167932bc.js  85b898c3b3.js
search.index/type/: 1e24a25020.js  4ca267d257.js  83f095c2b4.js
src/better_duck_core/: config.rs.html  connection.rs.html  error.rs.html  lib.rs.html
src/better_duck_diesel/: backend.rs.html  bind_collector.rs.html  connection.rs.html  lib.rs.html  result.rs.html  row.rs.html
(+97 files in other folders)
