
[workspace]
resolver = "2"
members = ["crates/better-duck-core", "crates/better-duck-diesel"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hamid Reza Shakibi <shakibihamidreza@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust wrapper for DuckDB"
repository = "https://github.com/nimdeveloper/better-duck"
keywords = ["duckdb", "database", "analytics", "diesel"]
categories = ["database"]
readme = "README.md"

[workspace.dependencies]
libduckdb-sys = { version = "1.5.3", default-features = false }
chrono = { version = "0.4.41", default-features = false }
thiserror = "1.0"                                               # For error handling
log = "0.4"                                                     # For logging
parking_lot = "0.12"                                            # For efficient synchronization
# Optional dependencies
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1.37.2", default-features = false }
tokio = "1.0"
strum = "0.25"
diesel = { version = "2.2", default-features = false }
diesel_derives = { version = "2.2" }

[profile.dev]
debug = 2 # Full debug info

[profile.test]
debug = 2 # Full debug info
