
[workspace]
resolver = "2"
members = ["crates/better-duck-core", "crates/better-duck-diesel"]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Hamid Reza Shakibi <shakibihamidreza@gmail.com>"]
license     = "MIT OR Apache-2.0"
description = "Rust DuckDB client with Diesel ORM support"
repository  = "https://github.com/nimdeveloper/better-duck"
homepage    = "https://github.com/nimdeveloper/better-duck"
keywords    = ["duckdb", "database", "diesel", "analytics", "embedded"]
categories  = ["database", "database-implementations"]
readme      = "README.md"

[workspace.dependencies]
libduckdb-sys = { version = "1.5.3", default-features = false }
chrono        = { version = "0.4.41", default-features = false }
thiserror     = "1.0"
log           = "0.4"
parking_lot   = "0.12"
serde         = { version = "1.0", features = ["derive"] }
rust_decimal  = { version = "1.37.2", default-features = false }
tokio         = "1.0"
strum         = "0.25"
diesel        = { version = "2.2", default-features = false }
diesel_derives = { version = "2.2" }

[workspace.lints.rust]
missing_docs           = "warn"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
# Lint groups — groups at lower priority so individual overrides win.
correctness                = { level = "deny",  priority = -1 }
suspicious                 = { level = "warn",  priority = -1 }
style                      = { level = "warn",  priority = -1 }
complexity                 = { level = "warn",  priority = -1 }
perf                       = { level = "warn",  priority = -1 }
cargo                      = { level = "warn",  priority = -1 }
# pedantic is opt-in only — too noisy for FFI-heavy code with -D warnings.
pedantic                   = { level = "allow", priority = -1 }
# Individual overrides (default priority 0 wins over groups at -1).
undocumented_unsafe_blocks = "warn"
module_name_repetitions    = "allow"
must_use_candidate         = "allow"
# transitive dependency version conflicts outside our control.
multiple_crate_versions    = "allow"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true

[profile.bench]
inherits = "release"
debug    = true
strip    = false

[profile.dev]
debug = 2

[profile.dev.package."*"]
opt-level = 3

[profile.test]
debug = 2
