[package]
name                  = "better-duck-core"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description.workspace = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true
readme.workspace      = true

[lints]
workspace = true

[dependencies]
libduckdb-sys = { workspace = true }
thiserror     = { workspace = true }
log           = { workspace = true }
parking_lot   = { workspace = true }
chrono        = { workspace = true, optional = true }
strum         = { workspace = true, features = ["derive"] }
rust_decimal  = { workspace = true, features = ["macros"], optional = true }

[features]
default         = ["bundled", "chrono", "decimal"]
bundled         = ["libduckdb-sys/bundled"]
json            = ["libduckdb-sys/json", "bundled"]
parquet         = ["libduckdb-sys/parquet", "bundled"]
buildtime_bindgen = ["libduckdb-sys/buildtime_bindgen"]
chrono          = ["dep:chrono"]
decimal         = ["dep:rust_decimal"]

[dev-dependencies]
tempfile   = "3.3"
criterion  = { version = "0.5", features = ["html_reports"] }
sysinfo    = "0.30"
plotters   = { version = "0.3", default-features = false, features = ["svg_backend", "all_series", "all_elements", "full_palette"] }
serde_json = "1"
serde      = { version = "1", features = ["derive"] }

[[bench]]
name    = "my_benchmark"
harness = false

[[bench]]
name    = "comparison"
harness = false
